[tool.poetry]
name = "at-controller"
version = "0.1.dev0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
transitions = "^0.9.2"
graphviz = "^0.20.3"
schema = "^0.7.7"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
